added basic menu display

--- a/index.html
+++ b/index.html
@@ -1,20 +1,143 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <!-- Implement from below -->
-  <body>
-    <header>
-        <!-- you can add the logo image here -->
-    </header>
-    <div class="subheading">Delicious, From-Scratch Recipes Close at Hand</div>
-    
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+<!-- Implement from below -->
+
+<body>
+  <header>
+    <!-- you can add the logo image here -->
+    <div align="center" style="padding-left:20%; padding-right:20%">
+      <img src="os-campus-cafe-logo-2x.png" style="width: 100%; height:100%;">
+    </div>
+    </div>
+  </header>
+
+  <section>
+    <div>
+      <div class="subheading" style="color:orange; text-align: center;">
+        Delicious, From-Scratch Recipes Close at Hand
+      </div>
+    </div>
+
+    <div class="subheading" align="center">
+      <i>
+        The fresh choice of UT!
+      </i>
+    </div>
+  </section>
+
+  <section>
+    <div class="box-menu">
+      <div>
+        <div style="display: inline; width: 30%; height: 100%;">
+          <img src="macandcheese.jpg" alt="Mac & Cheese" style="width:30%; height:30%">
+        </div>
+        <div style="display: inline; float: right; width: 69%;">
+          <div class="info-menu">
+            <div style="display: inline; width:90%;">
+              Mac & Cheese
+            </div>
+            <div style="display: inline; width:10%; float:right">
+              $5
+            </div>
+          </div>
+          <div style="display:inline">
+            <button class="button">
+              order
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="box-menu">
+      <div>
+        <div style="display: inline; width: 30%; height: 100%;">
+          <img src="pasta.jpg" alt="Pasta" style="width:30%; height:30%">
+        </div>
+        <div style="display: inline; float: right; width: 69%;">
+          <div class="info-menu">
+            <div style="display: inline; width:90%;">
+              Pasta
+            </div>
+            <div style="display: inline; width:10%; float:right">
+              $8
+            </div>
+          </div>
+          <div style="display:inline">
+            <button class="button">
+              order
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="box-menu">
+      <div>
+        <div style="display: inline; width: 30%; height: 100%;">
+          <img src="tacos.jpg" alt="Tacos" style="width:30%; height:30%">
+        </div>
+        <div style="display: inline; float: right; width: 69%;">
+          <div class="info-menu">
+            <div style="display: inline; width:90%;">
+              Tacos
+            </div>
+            <div style="display: inline; width:10%; float:right">
+              $8
+            </div>
+          </div>
+          <div style="display:inline">
+            <button class="button">
+              order
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="box-menu">
+      <div>
+        <div style="display: inline; width: 30%; height: 100%;">
+          <img src="enchilada.jpg" alt="Enchilada" style="width:30%; height:30%">
+        </div>
+        <div style="display: inline; float: right; width: 69%;">
+          <div class="info-menu">
+            <div style="display: inline; width:90%;">
+              Enchilada
+            </div>
+            <div style="display: inline; width:10%; float:right">
+              $10
+            </div>
+          </div>
+          <div style="display:inline">
+            <button class="button">
+              order
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  </section>
+
+
+
+
+
+</body>
+
 </html>
