--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <section>
     <div class="box-menu">
       <div>
-        <div style="display: inline; width: 30%; height: 100%;">
-          <img src="macandcheese.jpg" alt="Mac & Cheese" style="width:30%; height:30%">
+        <div class="image-menu">
+          <img src="macandcheese.jpg" alt="Mac & Cheese">
         </div>
         <div style="display: inline; float: right; width: 69%;">
           <div class="info-menu">
@@ -63,8 +63,8 @@
 
     <div class="box-menu">
       <div>
-        <div style="display: inline; width: 30%; height: 100%;">
-          <img src="pasta.jpg" alt="Pasta" style="width:30%; height:30%">
+        <div class="image-menu">
+          <img src="pasta.jpg" alt="Pasta">
         </div>
         <div style="display: inline; float: right; width: 69%;">
           <div class="info-menu">
@@ -83,12 +83,11 @@
         </div>
       </div>
     </div>
-  </section>
 
   <div class="box-menu">
     <div>
-      <div style="display: inline; width: 30%; height: 100%;">
-        <img src="tacos.jpg" alt="Tacos" style="width:30%; height:30%">
+      <div class="image-menu">
+        <img src="tacos.jpg" alt="Tacos">
       </div>
       <div style="display: inline; float: right; width: 69%;">
         <div class="info-menu">
@@ -110,8 +109,8 @@
 
   <div class="box-menu">
     <div>
-      <div style="display: inline; width: 30%; height: 100%;">
-        <img src="enchilada.jpg" alt="Enchilada" style="width:30%; height:30%">
+      <div class="image-menu">
+        <img src="enchilada.jpg" alt="Enchilada">
       </div>
       <div style="display: inline; float: right; width: 69%;">
         <div class="info-menu">
@@ -130,7 +129,6 @@
       </div>
     </div>
   </div>
-  </section>
 
   </section>
 
